# robot_assembler_gui

./: CMakeLists.txt  LICENSE  package.xml  plugin.xml  setup.py
launch/: robot_assembler_gui.launch
resources/: edit.ui  robot_assembler_gui.perspective
scripts/: robot_assembler_editor.py
src/robot_assembler_gui/: assemble_editor.py  edit_widget.py
