<package format="3">
  <name>robot_assembler_gui</name>
  <version>0.0.1</version>
  <description>GUI for robot_assembler</description>
  <maintainer email="youhei@jsk.imi.i.u-tokyo.ac.jp">Yohei Kakiuchi</maintainer>

  <license>BSD</license>

  <!--url type="website">http://wiki.ros.org/robot_assembler_gui</url-->
  <url type="repository">https://github.com/agent-system/robot_assembler_gui</url>
  <url type="bugtracker">https://github.com/agent-system/robot_assembler_gui/issues</url>

  <author>Yohei Kakiuchi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rosnode</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend version_gte="0.2.12">rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
